--- a/Html/07_input.html
+++ b/Html/07_input.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>Name
     <input type="text"><br><br>
     <input type="button" value="Login"><br><br>
@@ -22,20 +24,23 @@
     <input type="password" name="" id=""><br><br>
     <input type="file" name="" id=""><br><br>
     <input type="hidden" name=""><br><br>
-    image <input type="image" src="https://images.pexels.com/photos/16999877/pexels-photo-16999877/free-photo-of-miradas.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt=""><br><br>
-   Month <input type="month" name="" id=""><br><br>
-   Number<input type="number" name="" id=""><br><br>
-   Gender<input type="radio" name="h1" id="">Male
-   <input type="radio" name="h1" id="h1">FeMale <br><br>
-   Range<input type="range" name="" id=""><br><br>
-  Reset <input type="reset" value="Reset"><br><br>
-  search  <input type="search" name="" id=""><br><br>
-  <input type="submit" value="Submit"><br><br>
-  <input type="tel" name="" id=""><br><br>
-  Time<input type="time" name="" id=""><br><br>
-  Url<input type="url" name="" id=""><br><br>
-  <input type="week" name="" id="">
+    image <input type="image"
+        src="https://images.pexels.com/photos/16999877/pexels-photo-16999877/free-photo-of-miradas.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+        alt=""><br><br>
+    Month <input type="month" name="" id=""><br><br>
+    Number<input type="number" name="" id=""><br><br>
+    Gender<input type="radio" name="h1" id="">Male
+    <input type="radio" name="h1" id="h1">FeMale <br><br>
+    Range<input type="range" name="" id=""><br><br>
+    Reset <input type="reset" value="Reset"><br><br>
+    search <input type="search" name="" id=""><br><br>
+    <input type="submit" value="Submit"><br><br>
+    <input type="tel" name="" id=""><br><br>
+    Time<input type="time" name="" id=""><br><br>
+    Url<input type="url" name="" id=""><br><br>
+    <input type="week" name="" id="">
 
 
 </body>
+
 </html>
