--- a/Html/11_html5a.html
+++ b/Html/11_html5a.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <figure>
         <img src="img/workplace.jpg" alt="s1">
         <figcaption>Idfgdfgdfdf</figcaption>
     </figure>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem veritatis illo, omnis quibusdam praesentium magni enim ad natus ullam. Voluptas eveniet, quam minima officiis assumenda facere. Soluta in reprehenderit eligendi.</p>
-    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas fuga blanditiis aliquam consequatur maxime! Eligendi ullam maxime rerum. Optio, nam  Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum odit excepturi officiis voluptas! Fugit, laudantium. Laudantium animi necessitatibus commodi!
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem veritatis illo, omnis quibusdam praesentium
+        magni enim ad natus ullam. Voluptas eveniet, quam minima officiis assumenda facere. Soluta in reprehenderit
+        eligendi.</p>
+    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas fuga blanditiis aliquam consequatur
+        maxime! Eligendi ullam maxime rerum. Optio, nam Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+        nostrum odit excepturi officiis voluptas! Fugit, laudantium. Laudantium animi necessitatibus commodi!
 
     </blockquote>
 
@@ -20,14 +26,15 @@
     <datalist id="p1">
         <option value="Surat">
         <option value="borrada">
-            <option value="Navsari">
-                <option value="Dang">
+        <option value="Navsari">
+        <option value="Dang">
 
     </datalist>
     <datagrid></datagrid>
     <data>fgdfdfdff</data>
-    <progress max="100"  value="50">50</progress>
+    <progress max="100" value="50">50</progress>
     <input type="text" value="parth">
 
 </body>
+
 </html>
