--- a/bootstrap_project/about_us.html
+++ b/bootstrap_project/about_us.html
@@ -321,7 +321,7 @@
                         <p class="">
                             © 2023 Commute. All rights reserved | Design by
                             <a href="https://github.com/sidvekariya510"
-                                class="text-light text-decoration-none">Siddharth.V</a>
+                                class="text-light text-decoration-none">Piyush.P</a>
                         </p>
                     </div>
                 </div>
