--- a/bootstrap_project/contact.html
+++ b/bootstrap_project/contact.html
@@ -259,7 +259,7 @@
                     <div class="footerbottom col-12 text-center text-muted">
                         <p class="">
                             © 2023 Commute. All rights reserved | Design by <a href="https://github.com/sidvekariya510"
-                                class="text-light text-decoration-none">Siddharth.V</a>
+                                class="text-light text-decoration-none">Piyush.P</a>
                         </p>
                     </div>
                 </div>
