--- a/bootstrap_project/index.html
+++ b/bootstrap_project/index.html
@@ -526,8 +526,8 @@
                     <hr class=" text-light my-4">
                     <div class="footerbottom col-12 text-center text-muted">
                         <p class="">
-                            © 2023 Commute. All rights reserved | Design by <a href="https://github.com/sidvekariya510"
-                                class="text-light text-decoration-none">Siddharth.V</a>
+                            © 2023 Commute. All rights reserved | Design by <a href="https://github.com/panchanipiyush/CSS/tree/master/Css%20Resume%20Project/Commute"
+                                class="text-light text-decoration-none">Piyush.P</a>
                         </p>
                     </div>
                 </div>
