--- a/Css Resume Project/Stroll/index.html
+++ b/Css Resume Project/Stroll/index.html
@@ -376,7 +376,7 @@
     <footer>
         <div class="copyrights">
             <div class="left">
-                <p>© 2023 Stroll. All rights reserved. Design by <a href="#">Siddharth.V</a></p>
+                <p>© 2023 Stroll. All rights reserved. Design by <a href="#">Piyush.P</a></p>
             </div>
             <div class="right">
                 <ul>
