--- a/bootstrap_project/about_us.html
+++ b/bootstrap_project/about_us.html
@@ -320,7 +320,7 @@
                     <div class="footerbottom col-12 text-center text-muted">
                         <p class="">
                             © 2023 Commute. All rights reserved | Design by
-                            <a href="https://github.com/sidvekariya510"
+                            <a href="https://github.com/panchanipiyush/CSS/tree/master/Css%20Resume%20Project/Commute"
                                 class="text-light text-decoration-none">Piyush.P</a>
                         </p>
                     </div>
